objects/Checklist_Item__c.object
<CustomObject>
    <description>Contains the Items used during Discovery with association to a Category.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Category__c</fullName>
        <label>Item Category</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Item Category is not active.</errorMessage>
            <filterItems>
                <field>Checklist_Category__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Checklist_Category__c</referenceTo>
        <relationshipLabel>Discovery Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Discovery Checklist Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>Item_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CLI-{000000}</displayFormat>
        <label>Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>